--- a/hisysevent.yaml
+++ b/hisysevent.yaml
@@ -182,6 +182,7 @@ BUSCENTER_AUDIT:
   PEER_DEV_TYPE: {type: INT32, desc: peer device type }
   ATTACK_TIMES: {type: INT32, desc: attack times }
   BE_ATTACKED_PORT: {type: INT32, desc: be attacked port }
+  HEARTBEAT_EVENT_TYPE: {type: INT32, desc: heartbeat event type }
 
 TRANSPORT_BEHAVIOR:
   __BASE: {type: BEHAVIOR, level: MINOR, desc: transport behavior }
