[test]:Add the test case corresponding to disc_coap_parser.c
Signed-off-by: huxianghao <huxianghao@huawei.com>

--- a/tests/core/discovery/BUILD.gn
+++ b/tests/core/discovery/BUILD.gn
@@ -36,6 +36,7 @@ group("unittest") {
   }
   if (dsoftbus_feature_disc_coap) {
     deps += [
+      "coap/common/unittest:unittest",
       "coap/nstackx_adapter_mock:unittest",
       "coap/unittest:unittest",
     ]
