--- a/core/transmission/trans.gni
+++ b/core/transmission/trans.gni
@@ -75,6 +75,8 @@ if (defined(ohos_lite)) {
 
     trans_session_src += broadcast_sources
     trans_session_inc += broadcast_include_dirs
+    trans_session_deps +=
+        [ "$dsoftbus_root_path/components/nstackx/nstackx_ctrl:nstackx_ctrl" ]
   } else {
     trans_session_inc +=
         [ "$dsoftbus_root_path/core/transmission/broadcast/include" ]
