--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -40,8 +40,6 @@ if (defined(ohos_lite)) {
     "$dsoftbus_root_path/core/common/dfx/interface/include",
     "$dsoftbus_root_path/interfaces/kits",
     "$dsoftbus_root_path/interfaces/kits/common",
-    "//base/startup/init/interfaces/innerkits/include/syspara",
-    "//third_party/bounds_checking_function/include",
     "//third_party/json/include",
   ]
 
@@ -49,6 +47,10 @@ if (defined(ohos_lite)) {
     static_library("softbus_adapter") {
       include_dirs = common_include
       include_dirs += [ "//kernel/liteos_m/kal/cmsis" ]
+      external_deps = [
+        "bounds_checking_function:libsec_static",
+        "init:libbegetutil",
+      ]
       if (board_name == "hispark_pegasus") {
         include_dirs +=
             [ "$hispark_pegasus_sdk_path/third_party/lwip_sack/include" ]
@@ -148,8 +150,10 @@ if (defined(ohos_lite)) {
         "$dsoftbus_dfx_path/event:softbus_dfx_event",
         "$dsoftbus_dfx_path/log:softbus_dfx_log",
         "$hilog_lite_deps_path",
-        "//base/startup/init/interfaces/innerkits:libbegetutil",
-        "//third_party/bounds_checking_function:libsec_shared",
+      ]
+      external_deps = [
+        "bounds_checking_function:libsec_shared",
+        "init:libbegetutil",
       ]
 
       if (dsoftbus_feature_encrypt == 0) {
@@ -176,7 +180,6 @@ if (defined(ohos_lite)) {
       "$dsoftbus_feature_product_config_path/spec_config",
       "$dsoftbus_root_path/core/common/dfx/interface/include",
       "$dsoftbus_root_path/core/common/include",
-      "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include",
     ]
   }
 
@@ -192,9 +195,11 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/common/dfx/interface/include",
       "$dsoftbus_root_path/interfaces/kits",
       "$dsoftbus_root_path/interfaces/kits/common",
-      "//commonlibrary/c_utils/base/include",
-      "//third_party/bounds_checking_function/include",
       "//third_party/json/include",
+    ]
+    external_deps = [
+      "bounds_checking_function:libsec_shared",
+      "c_utils:utilsbase",
     ]
     sources = [
       "$dsoftbus_feature_product_config_path/spec_config/softbus_config_adapter.c",
@@ -212,8 +217,8 @@ if (defined(ohos_lite)) {
     public_deps = [
       "$dsoftbus_dfx_path/event:softbus_dfx_event",
       "$dsoftbus_dfx_path/log:softbus_dfx_log",
-      "//third_party/bounds_checking_function:libsec_shared",
     ]
+    public_external_deps = [ "bounds_checking_function:libsec_shared" ]
     native_source_path = rebase_path("$dsoftbus_root_path")
 
     ble_enhanced_impl =
@@ -238,7 +243,6 @@ if (defined(ohos_lite)) {
 
     external_deps = []
     if (enhanced_range && defined(global_parts_info.msdp_algorithm)) {
-      include_dirs += [ "//base/msdp/algorithm/ble_range/include" ]
       sources += [ "$dsoftbus_root_path/dsoftbus_enhance/adapter/common/range/softbus_adapter_range.c" ]
       external_deps += [ "algorithm:msdp_ble_range" ]
     } else {
@@ -256,9 +260,10 @@ if (defined(ohos_lite)) {
         "$softbus_adapter_common/openssl/softbus_adapter_crypto.c",
         "$softbus_adapter_common/openssl/softbus_aes_encrypt.c",
       ]
-      public_deps += [ "//third_party/openssl:libcrypto_shared" ]
+      public_external_deps += [ "openssl:libcrypto_shared" ]
     }
     public_configs = [ ":config_adapter_common" ]
+    public_external_deps += [ "hitrace:libhitracechain" ]
     if (is_standard_system) {
       external_deps += [
         "hilog:libhilog",
