--- a/core/common/dfx/anonymize/BUILD.gn
+++ b/core/common/dfx/anonymize/BUILD.gn
@@ -20,10 +20,10 @@ softbus_anonymizer_src = [ "src/anonymizer.c" ]
 if (defined(ohos_lite)) {
   if (ohos_kernel_type == "liteos_m") {
     build_type = "static_library"
-    libsec_deps = "//third_party/bounds_checking_function:libsec_static"
+    libsec_external_deps = [ "bounds_checking_function:libsec_static" ]
   } else {
     build_type = "shared_library"
-    libsec_deps = "//third_party/bounds_checking_function:libsec_shared"
+    libsec_external_deps = [ "bounds_checking_function:libsec_shared" ]
   }
   config("dsoftbus_anonymizer_interface_lite") {
     include_dirs = [
@@ -42,10 +42,8 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/interfaces/kits/common",
     ]
     sources = softbus_anonymizer_src
-    deps = [
-      "$hilog_lite_deps_path",
-      "$libsec_deps",
-    ]
+    deps = [ "$hilog_lite_deps_path" ]
+    external_deps = libsec_external_deps
     public_configs = [ ":dsoftbus_anonymizer_interface_lite" ]
   }
 } else {
@@ -64,7 +62,6 @@ if (defined(ohos_lite)) {
     include_dirs = [
       "$dsoftbus_dfx_path/interface/include",
       "$dsoftbus_root_path/interfaces/kits/common",
-      "//third_party/bounds_checking_function/include",
     ]
     sources = softbus_anonymizer_src
     defines += [ "__STDC_FORMAT_MACROS" ]
@@ -73,11 +70,11 @@ if (defined(ohos_lite)) {
     }
 
     public_configs = [ ":dsoftbus_anonymizer_interface_std" ]
-    deps = [
-      "$dsoftbus_dfx_path/log:softbus_dfx_log",
-      "//third_party/bounds_checking_function:libsec_shared",
+    deps = [ "$dsoftbus_dfx_path/log:softbus_dfx_log" ]
+    external_deps = [
+      "bounds_checking_function:libsec_shared",
+      "hilog:libhilog",
     ]
-    external_deps = [ "hilog:libhilog" ]
     innerapi_tags = [ "platformsdk_indirect" ]
     part_name = "dsoftbus"
     subsystem_name = "communication"
