--- a/sdk/bus_center/bus_center_sdk.gni
+++ b/sdk/bus_center/bus_center_sdk.gni
@@ -81,6 +81,7 @@ if (defined(ohos_lite)) {
         [ "$dsoftbus_root_path/core/bus_center/extend/include" ]
     bus_center_manager_sdk_src += [ "$dsoftbus_root_path/core/bus_center/extend/src/bus_center_ex_obj_proxy.cpp" ]
     bus_center_manager_sdk_src += [ "$dsoftbus_root_path/sdk/bus_center/ipc/$os_type/src/bus_center_server_proxy_virtual.cpp" ]
+    bus_center_manager_sdk_src += [ "$dsoftbus_root_path/sdk/bus_center/manager/src/client_bus_center_policy_virtual.c" ]
   }
 }
 
