--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -118,7 +118,7 @@ lnn_mock_test_include_dirs = [
   "$dsoftbus_root_path/core/transmission/trans_channel/manager/include",
   "$dsoftbus_root_path/core/bus_center/utils/include",
   "$dsoftbus_root_path/core/connection/wifi_direct",
-  "$dsoftbus_root_path/adapter/common/net/bluetooth/include/",
+  "$dsoftbus_root_path/adapter/common/net/bluetooth/include",
   "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single",
 ]
 
@@ -408,13 +408,20 @@ ohos_unittest("LNNConnectionFsmTest") {
     "$dsoftbus_root_path/tests/core/bus_center/mock_common/src/lnn_connection_mock.cpp",
     "$dsoftbus_root_path/tests/core/bus_center/mock_common/src/lnn_trans_mock.cpp",
     "net_builder/src/lnn_auth_mock.cpp",
+    "net_builder/src/lnn_connection_fsm_mock.cpp",
     "net_builder/src/lnn_connection_fsm_test.cpp",
     "net_builder/src/lnn_net_ledger_mock.cpp",
     "net_builder/src/lnn_service_mock.cpp",
   ]
 
   include_dirs = lnn_mock_test_include_dirs
-  deps = lnn_mock_test_deps
+  deps = [
+    "$dsoftbus_root_path/adapter:softbus_adapter",
+    "$dsoftbus_root_path/core/common:softbus_utils",
+    "$dsoftbus_root_path/core/common/dfx/log:softbus_dfx_log",
+    "//third_party/googletest:gmock",
+    "//third_party/googletest:gtest_main",
+  ]
 
   if (is_standard_system) {
     external_deps = [
