--- a/tests/core/transmission/trans_channel/tcp_direct/BUILD.gn
+++ b/tests/core/transmission/trans_channel/tcp_direct/BUILD.gn
@@ -626,6 +626,7 @@ ohos_unittest("TransTcpDirectListenerTest") {
     "$dsoftbus_root_path/interfaces/kits",
     "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct/src",
     "$dsoftbus_root_path/core/bus_center/lnn/net_buscenter/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
   ]
 
   deps = [
