--- a/core/frame/BUILD.gn
+++ b/core/frame/BUILD.gn
@@ -233,6 +233,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/common:softbus_utils",
       "$dsoftbus_root_path/core/common/dfx/hidumper_adapter:softbus_dfx_dump",
+      "$dsoftbus_root_path/sdk:softbus_client",
       "//third_party/cJSON:cjson",
     ]
     public_deps = [ "$dsoftbus_root_path/core/common/dfx/log:softbus_dfx_log" ]
