--- a/core/bus_center/bus_center_server.gni
+++ b/core/bus_center/bus_center_server.gni
@@ -58,11 +58,10 @@ bus_center_server_inc += [
 
 bus_center_server_external_deps = []
 
-if (defined(global_parts_info) &&
-    defined(global_parts_info.hiviewdfx_hicollie_native)) {
+if (defined(global_parts_info) && defined(global_parts_info.hicollie)) {
   bus_center_server_src +=
       [ "$softbus_adapter_common/dfx/softbus_adapter_xcollie.cpp" ]
-  bus_center_server_external_deps += [ "hicollie_native:libhicollie" ]
+  bus_center_server_external_deps += [ "hicollie:libhicollie" ]
 } else {
   bus_center_server_src +=
       [ "$softbus_adapter_common/dfx/softbus_adapter_xcollie_virtual.cpp" ]
