--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -120,6 +120,7 @@ lnn_mock_test_include_dirs = [
   "$dsoftbus_root_path/core/connection/wifi_direct",
   "$dsoftbus_root_path/adapter/common/net/bluetooth/include",
   "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single",
+  "$dsoftbus_root_path/adapter/common/net/bluetooth/broadcast/interface",
 ]
 
 lnn_mock_test_deps = [
@@ -1746,6 +1747,7 @@ if (!defined(ohos_lite) && enhanced_test) {
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/decision_db/include",
       "$dsoftbus_root_path/adapter/common/net/bluetooth/include",
       "$dsoftbus_root_path/adapter/common/net/bluetooth/broadcast/interface",
+      "$dsoftbus_root_path/dsoftbus_enhance/adapter/common/mlps/include",
     ]
     include_dirs += bus_center_decision_center_inc
 
