--- a/core/frame/standard/init/src/softbus_server.cfg
+++ b/core/frame/standard/init/src/softbus_server.cfg
@@ -21,9 +21,19 @@
                 "ohos.permission.GET_DISTRIBUTED_ACCOUNTS",
                 "ohos.permission.ACCESS_BLUETOOTH",
                 "ohos.permission.MANAGE_BLUETOOTH",
-                "ohos.permission.GET_BLUETOOTH_LOCAL_MAC"
+                "ohos.permission.GET_BLUETOOTH_LOCAL_MAC",
+                "ohos.permission.GET_WIFI_INFO",
+                "ohos.permission.SET_WIFI_INFO",
+                "ohos.permission.GET_WIFI_LOCAL_MAC",
+                "ohos.permission.GET_WIFI_CONFIG",
+                "ohos.permission.SET_WIFI_CONFIG"
             ],
-            "permission_acls" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS"],
+            "permission_acls" : [
+                "ohos.permission.GET_SENSITIVE_PERMISSIONS",
+                "ohos.permission.GET_WIFI_INFO_INTERNAL",
+                "ohos.permission.GET_WIFI_PEERS_MAC",
+                "ohos.permission.MANAGE_WIFI_CONNECTION"
+            ],
             "critical" : [0, 10, 10]
         }
     ]
