update sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/libsoftbus_stream.gni. fix format check problem
Signed-off-by: Huge_Dream <534463586@qq.com>

--- a/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/libsoftbus_stream.gni
+++ b/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/libsoftbus_stream.gni
@@ -62,9 +62,7 @@ if (defined(ohos_lite)) {
   libsoftbus_stream_deps += [ "//third_party/openssl/ohos_lite:openssl_shared" ]
 } else {
   if (enhanced) {
-    libsoftbus_stream_src += [
-      "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_adapter/src/softbus_fillp_inner_api.c",
-    ]
+    libsoftbus_stream_src += [ "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_adapter/src/softbus_fillp_inner_api.c" ]
     libsoftbus_stream_deps = [
       "$dsoftbus_root_path/components/nstackx_enhanced/fillp:FillpSo",
       "//third_party/bounds_checking_function:libsec_shared",
